--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "argon2": "^0.30.1",
-    "aws-sdk": "^2.1231.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mongoose": "^6.6.5",
@@ -40,8 +39,6 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "stream-json": "^1.7.4",
-    "untruncate-json": "^0.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -51,9 +48,9 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/node": "^18.11.0",
     "@types/passport": "^0",
     "@types/passport-jwt": "^3.0.7",
-    "@types/stream-json": "^1",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
